--- a/committee.html
+++ b/committee.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Σημαντικές Ημερομηνίες</title>
+    <title>ΣΤΑΤ2018 - Οργανωτική Επιτροπή</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li class="active-dropdown"><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -46,11 +47,51 @@
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
 
+    <div class="pagination">
+       <div class="pagination-container">
+        <div class="holder"><i class="fa fa-users" aria-hidden="true"></i> Οργανωτική Επιτροπή</div>
+        </div>
+    </div>
 
     <div class="content-container">
         <div class="container">
-            <div id="not-jus" class="introduction">Δημήτρης Λάμνισος (Ευρωπαϊκό Πανεπιστήμιο)<br> Ελένη Τσολάκη (Πανεπιστήμιο Frederick)<br> Κώστας Χριστοφή (Τεχνολογικό Πανεπιστήμιο Κύπρου)<br> Μιλτώ Χ΄΄Κυριάκου (UCLan Cyprus)<br> Μιχάλης Τάλιας (Ανοικτό Πανεπιστήμιο Κύπρου)<br> Σέργιος Αγαπίου (Πανεπιστήμιο Κύπρου)<br> Πετρούλα Μαυρικίου (Πανεπιστήμιο Frederick)<br> Χαριτίνη Τσαγγάρη (Πανεπιστήμιο Λευκωσίας)<br>
+            <div id="not-jus" class="introduction">
+                <ul class="flex-container">
+                    <div class="flex-left">
+                        <br>
+                        <li>Δημήτρης Λάμνισος<br> Ευρωπαϊκό Πανεπιστήμιο<br> D.Lamnisos@euc.ac.cy<br>
+                        </li>
 
+                        <br>
+                        <li>Ελένη Τσολάκη<br> Πανεπιστήμιο Frederick<br> eng.te@frederick.ac.cy
+                        </li>
+
+                        <br>
+                        <li>Κώστας Χριστοφή<br> Τεχνολογικό Πανεπιστήμιο Κύπρου<br> costas.christophi@cut.ac.cy
+                        </li>
+
+                        <br>
+                        <li>Μιλτώ Χ΄΄Κυριάκου<br> UCLan Cyprus<br> mhadjikyriakou@uclan.ac.uk
+                        </li>
+                    </div>
+                    <div class="flex-right">
+                        <br>
+                        <li>Μιχάλης Τάλιας<br> Ανοικτό Πανεπιστήμιο Κύπρου<br> michael.talias@ouc.ac.cy
+                        </li>
+
+                        <br>
+                        <li>Σέργιος Αγαπίου<br> Πανεπιστήμιο Κύπρου<br> agapiou.sergios@ucy.ac.cy
+                        </li>
+
+                        <br>
+                        <li>Πετρούλα Μαυρικίου<br> Πανεπιστήμιο Frederick<br> p.mavrikiou@frederick.ac.cy
+                        </li>
+
+                        <br>
+                        <li>Χαριτίνη Τσαγγάρη<br> Πανεπιστήμιο Λευκωσίας<br> tsangari.h@unic.ac.cy
+                        </li>
+                    </div>
+                </ul>
             </div>
         </div>
     </div>
