--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Αρχική Σελίδα</title>
+    <title>ΣΤΑΤ2018 - Αρχική Σελίδα</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400i" rel="stylesheet">
 
 </head>
 
@@ -37,6 +37,7 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -62,18 +63,18 @@
 
             <p class="introduction">Με σκοπό την προώθηση της έρευνας και τη διάδοση της επιστημονικής γνώσης που αφορά τη Στατιστική Επιστήμη, οι ακαδημαϊκοί των δημόσιων και ιδιωτικών πανεπιστημίων της Κύπρου των οποίων τα ερευνητικά ενδιαφέροντα αφορούν την περιοχή της στατιστικής, διοργανώνουν την 1<sup>η</sup> Παγκύπρια Ημερίδα Στατιστικής που θα πραγματοποιηθεί στις εγκαταστάσεις του Πανεπιστημίου UCLan Cyprus την 1<sup>η</sup> Ιουνίου 2018. Το θέμα της ημερίδας είναι:</p>
 
-            <div id="center" class="introduction"><b><i>Θεωρία και Εφαρμογές της Στατιστικής Επιστήμης</i></b>
+            <div id="center" class="introduction"><span id="main-title"><b><i>« Θεωρία και Εφαρμογές της Στατιστικής Επιστήμης »</i></b></span>
             </div>
 
             <p class="introduction">Η ημερίδα απευθύνεται σε ακαδημαϊκούς, μεταπτυχιακούς φοιτητές καθώς και επιχειρηματικούς οργανισμούς των οποίων το αντικείμενο σχετίζεται με τη Στατιστική και τις εφαρμογές της. Οι συμμετέχοντες θα έχουν την ευκαιρία να παρουσιάσουν τις ακαδημαϊκές τους εργασίες, να επικοινωνήσουν, να αλληλεπιδράσουν, να συζητήσουν και να αναπτύξουν καινούριες συνεργασίες. Παράλληλα, μέσα από τις εργασίες της ημερίδας, η ακαδημαϊκή κοινότητα των στατιστικών καθώς και οι σχετικές με τη στατιστική επιχειρήσεις, θα μπορέσουν να γνωριστούν, να ανταλλάξουν γνώσεις και απόψεις και να αναζητήσουν τρόπους συνεργασίας.</p>
 
-            <div id="center" class="introduction"><b><i>«Πρόσκληση Υποβολής Εργασιών» </i></b>
+            <div id="center" class="introduction"><span><b><i>Πρόσκληση Υποβολής Εργασιών</i></b></span>
             </div>
 
 
-            <div class="introduction">Waiting for Ms Milto...<br><a class="more-btn" href="papers.html">Περισσότερα...</a></div>
+            <div class="introduction">Η Οργανωτική Επιτροπή της ημερίδας επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><a class="more-btn" href="papers.html">Περισσότερα...</a></div>
 
-            <div id="center" class="introduction"><b><i>«Χώρος διεξαγωγής»</i></b>
+            <div id="center" class="introduction"><span><b><i>Χώρος διεξαγωγής</i></b></span>
             </div>
 
             <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.html">Περισσότερα...</a></div>
