--- a/papers.html
+++ b/papers.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - 3. Πρόσκληση Υποβολής Εργασιών</title>
+    <title>ΣΤΑΤ2018 - Πρόσκληση Υποβολής Εργασιών</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li class="active-dropdown"><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -45,13 +46,17 @@
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
-
+    <div class="pagination">
+       <div class="pagination-container">
+        <div class="holder"><i class="fa fa-envelope-o" aria-hidden="true"></i>Πρόσκληση Υποβολής Εργασιών</div>
+        </div>
+    </div>
 
     <div class="content-container">
         <div class="container">
 
             <div class="introduction">Η Οργανωτική Επιτροπή της ημερίδας επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><br> Θεματικές ενότητες της Ημερίδας:<br>
-                <ul id="not-jus">
+                <ul class="push-left" id="not-jus">
                     <li>Αναλυτική των Επιχειρήσεων</li>
                     <li>Ανάλυση Δεδομένων</li>
                     <li>Μηχανική Μάθηση-Νευρωνικά Δίκτυα</li>
