--- a/sponsors.html
+++ b/sponsors.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Σημαντικές Ημερομηνίες</title>
+    <title>ΣΤΑΤ2018 - Χορηγοί</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -36,19 +36,35 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
             </li>
             <li><a href="#">Υποβολή Περιλήψεων</a></li>
-           <li class="active-link"><a href="sponsors.html">Χορηγοί</a></li>
+            <li class="active-link"><a href="sponsors.html">Χορηγοί</a></li>
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
 
+    <div class="pagination">
+       <div class="pagination-container">
+        <div class="holder"><i class="fa fa-handshake-o" aria-hidden="true"></i> Χορηγοί
+        </div>
+        </div>
+    </div>
 
-    <div class="content-container">
-        <h1 id="program-alert">Sponsors.</h1>
+   <div class="content-container">
+
+        <!-- CONTAINER THAT HOLDS THE INTRODUCTION -->
+        <div class="container">
+
+            <p class="introduction">Οι χορηγοί Θα ανακοινωθούν αργότερα</p>
+
+            
+
+        </div>
+
     </div>
     <!-- END OF CONTAINER THAT HOLDS THE INTRODUCTION -->
 
