--- a/venue.html
+++ b/venue.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Σημαντικές Ημερομηνίες</title>
+    <title>ΣΤΑΤ2018 - Χώρος Διεξαγωγής</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
     <link href="lightbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
@@ -38,6 +39,7 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li class="active-dropdown"><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -48,20 +50,25 @@
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
 
+    <div class="pagination">
+        <div class="pagination-container">
+            <div class="holder"><i class="fa fa-building-o" aria-hidden="true"></i> Χώρος Διεξαγωγής</div>
+        </div>
+    </div>
 
     <div class="content-container">
         <div class="container">
             <div class="introduction">
 
                 <div class="cnt">
-                    <img class="mySlides" src="uclan_cyprus.jpg" style="width:100%">
-                    <img class="mySlides" src="uclan_cyprus2.jpg" style="width:100%">
-                    <img class="mySlides" src="uc3.jpg" style="width:100%">
-
+                    <img class="mySlides" src="uclan_cyprus.jpg">
+                    <img class="mySlides" src="uclan_cyprus2.jpg">
+                    <img class="mySlides" src="uclan_cyprus3.jpg">
 
                     <button class="left-btn" onclick="plusDivs(-1)">&#10094;</button>
                     <button class="right-btn" onclick="plusDivs(1)">&#10095;</button>
                 </div>
+
                 Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.
                 <br><br> Το UCLan Cyprus λειτουργεί κάτω από την ακαδημαϊκή ομπρέλα του UCLan Ηνωμένου Βασιλείου, αλλά ταυτόχρονα ελέγχεται ακαδημαϊκά και λειτουργικά από την Επιτροπή Αξιολόγησης Ιδιωτικών Πανεπιστημίων και το Υπουργείο Παιδείας και Πολιτισμού της Κυπριακής Δημοκρατίας.<br><br> Αποτελεί ένα έργο μεγάλης χρηματικής επένδυσης, με στόχο τη διασφάλιση υψηλών προδιαγραφών ποιότητας στην εκπαίδευση, με ολοκαίνουριες κτηριακές εγκαταστάσεις. Είναι αξιοσημείωτο ότι το Πανεπιστήμιο διαθέτει: Δύο υπερσύγχρονα αμφιθέατρα χωρητικότητας 300 και 100 ατόμων αντιστοίχως, 30 αίθουσες διδασκαλίας, εξειδικευμένα εργαστήρια, το μοναδικό εικονικό δικαστήριο της Κύπρου, γυμναστήριο, υπερσύγχρονο εργαστήριο Εργοφυσιολογίας, μοντέρνα βιβλιοθήκη, καθώς και ειδικά διαμορφωμένους εξωτερικούς χώρους. Οι υψηλές προδιαγραφές που τέθηκαν επέβαλαν τη λειτουργία μίας υπερσύγχρονης πανεπιστημιούπολης με τεχνολογία αιχμής. Ως επιβράβευση της τεράστιας αυτής επένδυσης σε τεχνολογική υποδομή, τον Ιανουάριο του 2013, το UCLan Cyprus θριάμβευσε ανάμεσα σε όλες τις υποψηφιότητες από Ευρώπη, Μέση Ανατολή και Αφρική ως η πανεπιστημιούπολη με την πιο προηγμένη και καινοτόμo οπτικοακουστική τεχνολογία.<br><br>
 
@@ -106,7 +113,11 @@
     <script src="topNav.js"></script>
     <script src="jquery.viewportchecker.js"></script>
     <script src="animateAndSlider.js"></script>
-    <script src="lightbox.js"></script>
+    <script src="lightbox.js">
+
+
+    </script>
+
 
     <script>
         var slideIndex = 1;
