--- a/dates.html
+++ b/dates.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Σημαντικές Ημερομηνίες</title>
+    <title>ΣΤΑΤ2018 - Σημαντικές Ημερομηνίες</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet" />
     <link href="infinite-slider.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
                     <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li class="active-dropdown"><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -45,6 +46,12 @@
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
+
+    <div class="pagination">
+       <div class="pagination-container">
+        <div class="holder"><i class="fa fa-calendar" aria-hidden="true"></i>Σημαντικές Ημερομηνίες</div>
+        </div>
+    </div>
 
 
     <div class="content-container">
