--- a/program.html
+++ b/program.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ΣΤΑΤ2018 - Εγγραφή Συμμετεχόντων</title>
+    <title>ΣΤΑΤ2018 - Πρόγραμμα</title>
 
     <!-- CSS & CUSTOM FONTS -->
     <link href="style.css" rel="stylesheet" />
@@ -33,10 +33,10 @@
             <li class="dropdown-btn">
                 <a href="#">Πληροφορίες<span class="caret"></span></a>
                 <ul class="dropdown">
-                    <li class="active-dropdown"><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
+                    <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
                     <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
                     <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
-                    <li><a href="program.html">Πρόγραμμα</a></li>
+                    <li class="active-dropdown"><a href="program.html">Πρόγραμμα</a></li>
                     <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
                     <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
@@ -46,16 +46,19 @@
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
+
     <div class="pagination">
-       <div class="pagination-container">
-        <div class="holder"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Εγγραφή Συμμετεχόντων</div>
+        <div class="pagination-container">
+            <div class="holder"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>Πρόγραμμα</div>
         </div>
     </div>
+
+
 
     <div class="content-container">
         <div class="container">
 
-            <p class="introduction">Οι ενδιαφερόμενοι συμμετέχοντες θα πρέπει από 01/02/2018 μέχρι 01/04/2018 να έχουν συμπληρώσει την παρακάτω δήλωση συμμετοχής. Το κόστος της συμμετοχής ανέρχεται στα 20 ευρώ και αυτό θα καταβληθεί κατά την εγγραφή των συμμετεχόντων την ημέρα της εκδήλωσης. Το κόστος συμμετοχής στο δείπνο ανέρχεται στα 30 ευρώ.
+            <p class="introduction">Το πρόγραμμα Θα ανακοινωθεί αργότερα
             </p>
         </div>
     </div>
